Closed Bug 367528 Opened 18 years ago Closed 18 years ago

Cancelling an onkeydown event doesn't cancel keypress with cocoa widgets

Categories

(Core :: Widget: Cocoa, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: bzbarsky, Assigned: jaas)

References

()

Details

(Keywords: platform-parity, regression)

Attachments

(1 file)

BUILD:  Current trunk on OSX

STEPS TO REPRODUCE:
1)  Load the testcase for bug 333475 or bug 167145 (the former is in the URL
    field).
2)  Observe that it fails.
3)  Weep for regression tests for this stuff.

NOTES:  The issus started when we switched to cocoa widgets.
Flags: in-testsuite?
Flags: blocking1.9?
Attached patch fix v1.0Splinter Review
Attachment #252561 - Flags: review?(cbarrett)
Attachment #252561 - Flags: superreview?(sfraser_bugs)
Comment on attachment 252561 [details] [diff] [review]
fix v1.0

We should probably also set mKeyHandled back to PR_FALSE at the bottom of the keyDown method, by:

mIgnoreDoCommand = NO;
mCurKeyEvent = nil;

It isn't necessary, but its safe and instructive.
Attachment #252561 - Flags: review?(cbarrett) → review+
Comment on attachment 252561 [details] [diff] [review]
fix v1.0

sr= with josh's comments
Attachment #252561 - Flags: superreview?(sfraser_bugs) → superreview+
fixed on trunk
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Flags: blocking1.9?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: