Cancelling an onkeydown event doesn't cancel keypress with cocoa widgets. b=367528 r=cbarrett sr=pav